artsy/prototypes/auction-operator/v12/assets/css/alerts.css
.overlay-wrapper {
  display: none;
  background: rgba(0,0,0,.85);
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100000;
}

.overlay-wrapper.show { display: block; }
.overlay-wrapper.show .action-buttons { display: block; }

.overlay-wrapper .cancel { display: inline-block !important; }

.alert-window {
  width: 340px;
  position: absolute;
  z-index: 1000;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  display: none;
  background: transparent !important;
}

.alert-window.show { display: block; }

.alert-window .content {
  min-height: 140px;
  background: #fff;
  padding: 20px;
  font-size: 22px;
  text-align: center;
  position: relative;
}

.alert-window .message {
  position: absolute;
  top: 50%;
  width: 100%;
  text-align: center;
  transform: translateY(-50%);
}

.alert-window .rows {
  position: absolute;
  width: calc(100% - 40px);
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.alert-window .row {
  width: 100%;
  position: relative;
  margin: 10px 0;
  text-align: left;
}

.alert-window .row .winning-bidder,
.alert-window .row .sale-amount {
  position: absolute;
  top: 0;
  right: 0;
}


.alert-butons { font-size: 0; }

.alert-buttons .small-button {
  width: calc(50% - 1px);
  height: 60px;
  font-size: 22px;
  margin: 2px 0 0 0;
  padding: 16px 0 0 0;
}

.alert-buttons .small-button.disabled {
  background: #fff;
  color: #ccc !important;
  cursor: default;
}

.alert-buttons .cancel { color: #000 !important; background: #fff; margin-right: 2px; }
.alert-buttons .floor { margin-right: 2px; }
.alert-window.starting-ask,
.alert-window.change-lot { width: 470px; }

.alert-window.starting-ask .content { text-align: left; }
.alert-window.starting-ask .optoins { position: relative; }

.alert-window.starting-ask .optoins .small-button {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  background: #F1CD39;
  color: #000 !important;
  width: 115px;
}

.alert-window.starting-ask .optoins .small-button.change-lot {
  right: 130px;
}

.alert-window.starting-ask .content .lot:before {
  content: '';
  width: 38px;
  height: 38px;
  border-radius: 100%;
  background: url('../img/artwork-thumb.png') #f8f8f8 no-repeat;
  background-size: 38px 38px;
  display: inline-block;
  vertical-align: middle;
  margin: 0 10px 0 0;
}

.alert-window .small-wide-button {
  width: 100%;
  margin: 20px 0 0 0;
  border-color: #622EEC;
  color: #622EEC;
}

.alert-window .small-wide-button .button-description {
  position: absolute;
  top: 50%;
  left: 15px;
  transform: translateY(-50%);
}


.alert-window.change-lot .content {
  height: 293px;
  overflow: scroll;
  text-align: left;
  padding-bottom: 0;
}

.alert-window.change-lot .content::-webkit-scrollbar { display: none; }

.alert-window.change-lot input {
  width: 100%;
  font-family: 'avant-garde', Helvetica, arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  background: #fff;
  text-transform: uppercase;
  border: 2px solid #fff;
  margin-bottom: 2px;
  font-size: 12px;
  padding: 22px 20px 22px 48px;
  outline: none;
  letter-spacing: 1px;
}

.alert-window.change-lot .input-search-icon {
  background: url('../img/search-icon.svg');
  width: 20px;
  height: 20px;
  margin-right: 10px;
  position: absolute;
  top: 18px;
  left: 20px;
}

.alert-window.change-lot input:focus {
  color: #000;
}

.alert-window.change-lot .lot-button {
  font-size: 12px;
  padding: 20px 10px;
  border: 2px solid #e5e5e5;
  margin-bottom: 20px;
  cursor: pointer;
  position: relative;
  color: #666;
}

.alert-window.change-lot .lot-button:hover {
  border-color: #622EEC;
  color: #622EEC;
}

.alert-window.change-lot .lot-button:before {
  content: '';
  font-size: 8px;
  padding: 4px 6px 4px 8px;
  margin: 0 10px 0 0;
  position: relative;
  width: 48px;
  top: -1px;
  display: inline-block;
  text-align: center;
  color: #000;
}

.alert-window.change-lot .lot-button.sold:before {
  content: 'Sold';
  background: #000;
  color: #fff;
}

.alert-window.change-lot .lot-button.upcoming:before {
  content: 'Upcoming';
  background: #F1CD39;
}

.alert-window.change-lot .lot-button.current:before {
  content: 'Current';
  background: #0FDB83;
}

.alert-window.change-lot .lot-button:after {
  content: '';
  width: 38px;
  height: 38px;
  border-radius: 100%;
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: #e5e5e5;
  background-size: 38px 38px;
}

.alert-window.change-lot .lot-button.a:after { background-image: url('../img/artwork-thumb-a.png'); }
.alert-window.change-lot .lot-button.b:after { background-image: url('../img/artwork-thumb-b.png'); }
.alert-window.change-lot .lot-button.c:after { background-image: url('../img/artwork-thumb-c.png'); }
.alert-window.change-lot .lot-button.d:after { background-image: url('../img/artwork-thumb-d.png'); }

.alert-window.change-lot .lot-button.selected {
  border-color: #622EEC;
  color: #622EEC;
}

.alert-window.change-lot .lot-button.selected:after {
  background: url('../img/lot-button-selected.svg');
}

.current-ask .placeholder-button-value {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 15px;
  text-align: right;
  color: rgba(98,46,236,.5);
}

.current-ask .placeholder-button-value.hide {
  display: none;
}

.pause-sale-button {
  width: 150px;
  height: 60px;
  background: #F7625A;
  position: fixed;
  top: 0;
  right: 0;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  cursor: pointer;
  color: #fff;
}

.pause-sale-button.paused {
  background: #0FDB83;
}

.pause-sale-button:after {
  width: 100%;
  text-align: center;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.pause-sale-button:after { content: 'Pause sale'; }
.pause-sale-button.paused:after { content: 'Resume sale'; }

.hold-sale.hide { display: none; }

